--- a/filter-web/static/edit.html
+++ b/filter-web/static/edit.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit Rules - Miniflux Filter Manager</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>Edit Rules</h1>
-        <a href="/static/" class="button button-secondary">← Back to Dashboard</a>
+        <a href="./" class="button button-secondary">← Back to Dashboard</a>
       </div>
 
       <div id="loading" class="loading">Loading rule set...</div>
@@ -32,7 +32,7 @@
 
         <div class="actions">
           <button class="button button-primary" onclick="saveRules()">Save Rules</button>
-          <a href="/static/" class="button button-secondary">Cancel</a>
+          <a href="./" class="button button-secondary">Cancel</a>
         </div>
       </div>
     </div>
@@ -82,6 +82,6 @@
       </div>
     </template>
 
-    <script src="/static/edit.js"></script>
+    <script src="edit.js"></script>
   </body>
 </html>
