--- a/filter-web/static/index.html
+++ b/filter-web/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miniflux Filter Manager</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <script src="/static/lib/api.js"></script>
-    <script src="/static/app.js"></script>
+    <script src="lib/api.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
